--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,5 @@
 <p>Main menu</p>
 <ul>
 	<li><a href="/contacts">View all contacts</a></li>
+	<li><a href="/contacts/new">Create a new contact</a></li>
 </ul>
