--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title> James' CRM App </title>
 </head>
 <body>
-
-<%= yield %>
-
-
+	<%= yield %>
 <footer>Created by James McGeachie!</footer>
 </body>
 </html>
