--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,9 @@
-<h1>Welcome to this <%= @crm_app_name %></h1>
+<div class="menu">
+<h1>Welcome to <%= @crm_app_name %></h1>
 <p>Main menu</p>
 <ul>
 	<li><a href="/contacts">View all contacts</a></li>
 	<li><a href="/contacts/new">Create a new contact</a></li>
+	<li><a href="http://www.google.com">Google stuff I guess</a></li>
 </ul>
+</div>
