--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,9 +1,25 @@
 <h1>Add a new contact</h1>
-<form action="/contacts" method="post">
-  <p> First name </p><input type="text" name="first_name">
-  <p> Last name </p><input type="text" name="last_name">
-  <p> Email </p><input type="text" name="email">
-  <p> Notes </p><input type="text" name="notes">
-  <br>
-  <input type="submit" name="Submit">
-</form>
+<fieldset>
+<legend>Add New Contact</legend>
+	<div class="form">
+	<form action="/contacts" method="post">
+	  <div class="labels">
+		  <p><label for="first-name"> First name </label></p>
+		  <p><label for="last-name"> Last name </label></p>
+		  <p><label for="email"> Email </label></p>
+		  <p><label for="notes"> Notes </label></p>
+	  </div>
+
+		<div class="inputs">
+			<p><input type="text" name="first_name" id="first-name" placeholder="John"></p>
+			<p><input type="text" name="last_name" id="last-name" placeholder="Doe"></p>
+			<p><input type="text" name="email" id="email" placeholder="e.g. johndoe2015@gmail.com"></p>
+		  <p><input type="text" name="notes" id="notes" placeholder="e.g. My Bestie!"></p>
+		 </div>
+
+	  <div id="submit">
+	  <input type="submit" value="Add New Contact">
+	  </div>
+	</form>
+	</div>
+</fieldset>
