--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -18,7 +18,7 @@
 		 </div>
 
 	  <div id="submit">
-	  <input type="submit" value="Add New Contact">
+	  <input type="submit" value="Save New Contact">
 	  </div>
 	</form>
 	</div>
