--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,21 @@
 <h1>Welcome to <%= @crm_app_name %></h1>
 <div class="menu">
-<p>Main menu</p>
-<ul>
-	<li><a href="/contacts">View all contacts</a></li>
-	<li><a href="/contacts/new">Create a new contact</a></li>
-	<li><a href="http://www.google.com">Google stuff I guess</a></li>
-</ul>
+	<table id="mainmenu">
+	<th>
+		<tr>
+		<td>Main Menu</td>
+		</tr>
+	</th>
+	<tbody>
+		<tr>
+		<td><a href="/contacts">View all contacts</a></td>
+		</tr>
+		<tr>
+		<td><a href="/contacts/new">Create a new contact</a></td>
+		</tr>
+		<tr>
+		<td><a href="http://www.google.com">Google stuff I guess</a></td>
+		</tr>
+	</tbody>
+	</table>
 </div>
