--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,8 +21,8 @@
 				</div>
 			<%= yield %>
 			</div>
-		<div id="footer">Created by James McGeachie!</div>
 	</div>
+	<div id="footer">Created by James McGeachie at Bitmaker Labs</div>
 </div>
 </body>
 </html>
