Refactored CRM to work with DataMapper methods. CRUD operations working effectively. Deleted old tests.

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -8,7 +8,7 @@
 			<td>Notes</td>
 		</tr>
 	</th>
-	<% Contact.all.each do |contact| %>
+	<% @contacts.each do |contact| %>
 		<tr>
 		  <td><a href="contacts/<%= contact.id %>"><%= contact.full_name %></a></td>
 		  <td><%= contact.email %></td>
